# libvmpl

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL  Makefile.am  README  build-libvmpl.sh  build.sh  configure.ac  meson.build  meson_options.txt  package.sh
debian/: changelog  control  copyright  libvmpl-dev.install  libvmpl.install  not-installed  rules
include/: alloc.h  apic.h  bitmap.h  ca.h  cache.h  config.h  config.in  cpu-x86.h  debug.h  dune.h  dunify.h  entry.h  env.h  error.h  fpu.h  ghcb.h  globals.h  hotcalls.h  hypercall.h  idt.h  ioctl.h  layout.h  log.h  mapping.h  mm.h  mmu-x86.h  mmu.h  page.h  percpu.h  pgtable.h  platform.h  pmm.h  procmap.h  seimi.h  serial.h  sev.h  signals.h  sys-filter.h  sys.h  syscall.h  (+11 more)
libdune/: CMakeLists.txt  Makefile.am  configure.ac  dune.h  libdune.c
libdunify/: CMakeLists.txt  Makefile.am  configure.ac  dunify.c  install_manifest_runtime.txt
src/: alloc.c  apic.c  bitmap.c  ca.c  cache.c  debug.c  dune.S  dunify.c  elf.c  entry.c  error.c  ghcb.c  hotcalls.c  hypercall.c  ioctl.c  libdune.c  log.c  mm.c  page.c  percpu.c  pgtable.c  pmm.c  procmap.c  seimi.c  serial.c  sys-filter.c  syscall.c  syscall_vmpl.c  trap.c  util.c  utils.c  vc.c  vm.c  vma.c  vmpl-hotcalls.c  vmpl-ioctl.c  vmpl.c  vmsa.c  vsyscall.S
src/core/: _entry.S  apic.c  debug.c  dune.S  dune.c  idt.c  ioctl.c  percpu.c  platform.c  signals.c  trap.c  user.c  vmpl.c
src/mm/: layout.c  mapping.c  mm.c  page.c  pgtable.c  procmap.c  vm.c
src/security/: seimi.c  sys-filter.c
src/syscall/: hotcalls.c  syscall.c  vsyscall.S
src/util/: utils.c
src/utils/: elf.c  env.c  log.c  util.c
src/vc/: ghcb.c  vc.c
tests/: heap.c  mem.c  mmap.c  test_alloc.c  test_cache.c  test_fit.c
